fix gap main

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ main {
     width: 100%;
     height: 100%;
     padding: 5rem 0 0 20%;
-    gap: 7rem;
+    gap: 10rem;
     background-image: url(../images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
